fix: Correções na altura e removendo white-space: nowrap

--- a/admin/scss/components/_outliner.comp.scss
+++ b/admin/scss/components/_outliner.comp.scss
@@ -2,7 +2,7 @@
     background-color: var(--on-bg-light);
     padding: 0;
     width: 100%;
-    height: 140px;
+    height: auto;
     font-size: 12px;
     cursor: default;
     overflow: auto;
@@ -12,7 +12,6 @@
     &-item {
         padding: 4px;
         color: var(--text-dark);
-        white-space: nowrap;
         
         &--is-active {
             background-color: rgba(0, 0, 0, 0.04);
